--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "expo": "^17.0.0",
+    "graphql": "^0.10.1",
     "react": "16.0.0-alpha.6",
     "react-native": "^0.44.0",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-navigation": "^1.0.0-beta.11",
+    "styled-components": "^2.0.0"
   }
 }
