--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "^0.44.0",
     "react-navigation": "^1.0.0-beta.11",
+    "react-relay": "^1.0.0",
     "styled-components": "^2.0.0"
   }
 }
