Introducing relay modern

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,15 @@
 {
-  "presets": ["babel-preset-expo"],
+  "presets": [
+    "babel-preset-expo",
+    "react-native"
+  ],
   "env": {
     "development": {
-      "plugins": ["transform-react-jsx-source"]
+      "plugins": [
+        "transform-react-jsx-source",
+        "./plugins/babelRelayPlugin",
+        "react-relay"
+      ]
     }
   }
 }
