--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "babel-plugin-react-relay": "^0.10.0",
+    "babel-plugin-relay": "^1.0.1",
     "jest-expo": "~1.0.1",
     "react-native-scripts": "0.0.30",
     "react-test-renderer": "16.0.0-alpha.6"
@@ -27,6 +28,7 @@
     "react-native": "^0.44.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-relay": "^1.0.0",
+    "relay": "^0.8.0-1",
     "relay-compiler": "^1.0.0",
     "styled-components": "^2.0.0"
   },
